# CO3

./: .gitignore  .gitmodules  Dockerfile  README.md
code_coverage/runtime_fw/: CMakeLists.txt  coverageRuntime.c
firmware/Microchip/SAMD51/: .gitignore  AtmelStart.env_conf  AtmelStart.gpdsc  CMakeLists.txt  arm.cmake  atmel_start.c  atmel_start.h  atmel_start_config.atstart  atmel_start_pins.h  clang.cmake  driver_init.c  files.txt  main.c  stdio_start.c  usb_start.c  usb_start.h
firmware/Microchip/SAMD51/CommonCO3/: CMakeLists.txt  ProtocolConfig.h
firmware/Microchip/SAMD51/FuzzerSHIFT/inc/: .main.h.swp  ConfigFuzzing.h  FreeRTOSConfig.h  McuASANconfig.h  config_malloc.h  main.h
firmware/Microchip/SAMD51/FuzzerSHIFT/src/: MonitorAndTargetSingleCore.c
firmware/Microchip/SAMD51/armcc/: Makefile
firmware/Microchip/SAMD51/config/: hpl_cmcc_config.h  hpl_dmac_config.h  hpl_gclk_config.h  hpl_osc32kctrl_config.h  hpl_port_config.h  hpl_sercom_config.h  hpl_usb_config.h  peripheral_clk_config.h  usbd_config.h
firmware/Microchip/SAMD51/documentation/: usb_device_cdc.rst  usb_device_core.rst  usb_protocol_cdc.rst  usb_protocol_core.rst
firmware/Microchip/SAMD51/examples/: CMakeLists.txt  driver_examples.c
firmware/Microchip/SAMD51/gcc/: Makefile
firmware/Microchip/SAMD51/hal/: CMakeLists.txt
firmware/Microchip/SAMD51/hal/include/: hal_atomic.h  (+21 more)
firmware/Microchip/SAMD51/hpl/: CMakeLists-Lib.txt  CMakeLists.txt
firmware/Microchip/SAMD51/hri/: hri_ac_d51.h  hri_adc_d51.h  hri_aes_d51.h  hri_ccl_d51.h  hri_cmcc_d51.h  hri_d51.h  hri_dac_d51.h  hri_dmac_d51.h  hri_dsu_d51.h  hri_eic_d51.h  hri_evsys_d51.h  hri_freqm_d51.h  hri_gclk_d51.h  hri_hmatrixb_d51.h  hri_i2s_d51.h  hri_icm_d51.h  hri_mclk_d51.h  hri_nvmctrl_d51.h  hri_osc32kctrl_d51.h  hri_oscctrl_d51.h  hri_pac_d51.h  hri_pcc_d51.h  hri_pdec_d51.h  hri_pm_d51.h  hri_port_d51.h  hri_qspi_d51.h  hri_ramecc_d51.h  hri_rstc_d51.h  hri_rtc_d51.h  hri_sdhc_d51.h  hri_sercom_d51.h  hri_supc_d51.h  hri_tc_d51.h  hri_tcc_d51.h  hri_trng_d51.h  hri_usb_d51.h  hri_wdt_d51.h
firmware/Microchip/SAMD51/nbproject/: Makefile-Default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-Default.mk  Makefile-variables.mk  configurations.xml  project.xml
firmware/Microchip/SAMD51/printf/: CMakeLists.txt
firmware/Microchip/SAMD51/samd51a/: CMakeLists-Lib.txt  CMakeLists.txt
firmware/Microchip/SAMD51/stdio_redirect/: CMakeLists.txt
firmware/Microchip/SAMD51/usb/: CMakeLists.txt  usb_atmel.h  usb_debug.h  usb_includes.h  usb_protocol.c  usb_protocol.h
firmware/NXP/Commandline/CommonCO3/: CMakeLists.txt  ProtocolConfig.h
firmware/NXP/Commandline/usb/: CMakeLists.txt
firmware/NXP/K66F-Template/: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  arm.cmake  clang.cmake  frdmk66f_dev_cdc_vcom_freertos JLink Debug _CMAKE.launch
firmware/NXP/K66F-Template/CommonCO3/: CMakeLists.txt  FreeRTOSConfig.h  ProtocolConfig.h
firmware/NXP/K66F-Template/board/: CMakeLists.txt  board.h
firmware/NXP/K66F-Template/component/: CMakeLists.txt
firmware/NXP/K66F-Template/drivers/: CMakeLists.txt
firmware/NXP/K66F-Template/freertos/: CMakeLists.txt
firmware/NXP/K66F-Template/ld/: frdmk66f_dev_cdc_vcom_freertos_Debug.ld  frdmk66f_dev_cdc_vcom_freertos_Debug_library.ld  frdmk66f_dev_cdc_vcom_freertos_Debug_memory.ld
firmware/NXP/K66F-Template/source/: FreeRTOSConfig.h  main.h  printhelpers.c  usb_device_descriptor.h  virtual_com.c
firmware/NXP/K66F-Template/startup/: CMakeLists.txt  arm.cmake
firmware/NXP/K66F-Template/usb/: CMakeLists.txt
firmware/NXP/K66F-Template/utilities/: CMakeLists.txt
firmware/STMfirmware/SpearCROMU_00001/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32H743ZITX_FLASH.ld  SpearCROMU_00001 Debug native.launch  SpearCROMU_00001.ioc  SpearRuntime Debug  LLVM.launch  SpearRuntime Debug.launch  clang.cmake  makefile  makefile.native  makefile.symcc  null.d
firmware/STMfirmware/SpearCROMU_00001/CommonCO3/: CMakeLists.txt  ProtocolConfig.h
firmware/STMfirmware/SpearCROMU_00001/Drivers/: CMakeLists.txt
firmware/STMfirmware/SpearCROMU_00001/Middlewares/: CMakeLists.txt
firmware/STMfirmware/SpearCROMU_00005/Middlewares/: CMakeLists.txt
firmware/STMfirmware/SpearPLC/USB_DEVICE/: CMakeLists.txt
pass/: .gitignore  CMakeLists.txt  DataDepGraph.cpp  DataDepGraph.h  Lower.cpp  Lower.h  PPG.py  Pass.cpp  Pass.h  Runtime.cpp  Runtime.h  Symbolizer.cpp  Symbolizer.h  cdfg.py  tmp_diff.patch
pass/ddg/: DataDepGraph.cpp  DataDepGraph.h
pass/dfg/: DataFlowGraph.cpp  DataFlowGraph.h
pass/findInput/: CMakeLists.txt  Main.cpp  Pass.cpp  Pass.h
pass/symbolizer/: .gitignore  CMakeLists.txt  Lower.cpp  Lower.h  Pass.cpp  Runtime.cpp  Runtime.h  Symbolizer.cpp  Symbolizer.h
pass/symbolizer/dfg/: DataFlowGraph.cpp  DataFlowGraph.h
pass/test/: foo.dot  main.dot
sym_backend/: .gitignore  CMakeLists.txt  Config.h  LibcWrappers.cpp  Orchestrator.cpp  Orchestrator.h  ProcessMessages.cpp  ProcessMessages_no_replace.cpp  README.md  RuntimeCommon.cpp  RuntimeCommon.h  SanityCheck.py  Shadow.cpp  Shadow.h  ThreadPool.h  buildAll.py  getTimeStamp.c  getTimeStamp.cpp  getTimeStamp.h  main.cpp
sym_backend/graph/: RuntimeCFG.cpp  RuntimeCFG.h  RuntimeDataDepGraph.cpp  RuntimeDataDepGraph.h  RuntimeDataFlowGraph.cpp  RuntimeDataFlowGraph.h  SymGraph.cpp  SymGraph.h  Val.cpp  Val.h
sym_backend/qsym_backend/: CMakeLists.txt  Runtime.cpp  Runtime.h
sym_backend/serialport/: CO3CommonRuntime.h  Message.cpp  Message.h  Message_no_replace.cpp  Message_no_replace.h  MsgQueue.cpp  MsgQueue.h  co3_serialport.c  co3_serialport.h  co3_socket.c  co3_socket.h  ring.c  ring.h  serialport.c  serialport.h  transmit.c  transmit.h
sym_backend/simple_backend/: CMakeLists.txt
sym_runtime/CROMU_00001/: CMakeLists.txt  clang.cmake
sym_runtime/CROMU_00001/Inc/: ProtocolConfig.h  libcgc.h  mymath.h  test.h
sym_runtime/CROMU_00001/Src/: libcgc.c  mymath.c  service.c  stdlib.c
sym_runtime/CROMU_00001/UninstrumentedSrc/: main.c
sym_runtime/CROMU_00001/pov/: POV_00000.xml.bin2
(+3121 files in other folders)
